--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stationboard</title>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="/assets/app.js" defer></script>
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 
 <body>
-    <div class="table-fixed-head">
+    <div id="app" class="table-fixed-head">
 
         <table id="time-table">
             <tbody id="table-body">
+                <tr v-for="train in trains">
+                    <td>{{ timestampToTime(train.stop.departure)}}</td>
+                    <td>{{ train.to }}</td>
+                    <td>{{ train.passList[0].platform}}</td>
+                </tr>
                 <!-- hier erscheint die Tabelle -->
             </tbody>
             <thead>
@@ -25,9 +31,11 @@
                 </tr>
             </thead>
             <caption>
-                <h1>Stationboard <span id="stationname"></span></h1>
-                <input type="text" id="station" />
-                <button>ok</button>
+                <h1>Stationboard {{ stationName }}</h1>
+                <input type="text" id="station" 
+                v-model="station" 
+                v-on:keypress.enter="loadConnections"/>
+                <button v-on:click.enter="loadConnections">ok</button>
             </caption>
         </table>
 
